--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,6 +31,40 @@
   height: 20px;
   padding-top: 6px;
   text-align: center;
+  margin: 0;
+}
+
+.header__hamburgernav {
+  position: fixed;
+  left: 8.5%;
+  top: 96px;
+  height: 235px;
+  width: 91.46%;
+  text-align: left;
+  list-style-type: none;
+  background-color: #eeeff4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 48px 19.43%;
+  margin: 0;
+}
+
+.header__hamburgernav--item {
+  color: #1b1d23;
+  text-decoration: none;
+  font-family: "spartan";
+  font-size: 15px;
+  line-height: 25px;
+  letter-spacing: 0;
+  font-weight: 700;
 }
 
 .header__nav {
